objects/Demo_Object__c.object
<CustomObject>
    <label>Demo Object</label>
    <nameField>
        <label>Demo Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Demo Object</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>

        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Field_1__c</fullName>
        <label>Field 1</label>
        <length>25</length>
        <type>Text</type>
    </fields>
   <fields>
        <fullName>Field_2__c</fullName>
        <label>Field 2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
   <fields>
        <fullName>Field_3__c</fullName>
        <label>Field 3</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
</CustomObject>